update ViolenceDetection notebook

--- a/ViolenceDetection.ipynb
+++ b/ViolenceDetection.ipynb
@@ -543,8 +543,265 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "72be8f0c-5753-4a24-b69f-29f4dcfdce4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: chardet in /opt/anaconda3/envs/keras2/lib/python3.9/site-packages (5.2.0)\n",
+      "Requirement already satisfied: charset-normalizer in /opt/anaconda3/envs/keras2/lib/python3.9/site-packages (3.3.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install chardet charset-normalizer\n",
+    "#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"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "42a18a7f-b5c5-42d6-9cf9-c90df278c843",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ API 요청 실패 (404)\n",
+      "Not Found\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# ✅ 새 API 엔드포인트\n",
+    "API_URL = \"https://api-inference.huggingface.co/models/Qwen/Qwen2-VL-7B-Instruct\"\n",
+    "headers = {\"Authorization\": \"Bearer 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\"}  # 토큰 그대로 사용 가능\n",
+    "\n",
+    "image_paths = [\n",
+    "    \"/Users/jeongjihoon/Desktop/violence_captures/capture_1.jpg\",\n",
+    "    \"/Users/jeongjihoon/Desktop/violence_captures/capture_2.jpg\",\n",
+    "    \"/Users/jeongjihoon/Desktop/violence_captures/capture_3.jpg\",\n",
+    "    \"/Users/jeongjihoon/Desktop/violence_captures/capture_4.jpg\",\n",
+    "    \"/Users/jeongjihoon/Desktop/violence_captures/capture_5.jpg\",\n",
+    "    \"/Users/jeongjihoon/Desktop/violence_captures/capture_6.jpg\",\n",
+    "    \"/Users/jeongjihoon/Desktop/violence_captures/capture_7.jpg\",\n",
+    "    \"/Users/jeongjihoon/Desktop/violence_captures/capture_8.jpg\"\n",
+    "]\n",
+    "\n",
+    "data = {\n",
+    "    \"inputs\": {\n",
+    "        \"text\": (\n",
+    "            \"이 8장의 CCTV 이미지를 분석하여 폭력이나 위협적 상황이 있다면 \"\n",
+    "            \"6하원칙(누가, 언제, 어디서, 무엇을, 어떻게, 왜)에 따라 \"\n",
+    "            \"경찰 보고서 형식으로 작성하라.\"\n",
+    "        )\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "files = [(\"images\", (f\"frame{i}.jpg\", open(path, \"rb\"), \"image/jpeg\")) for i, path in enumerate(image_paths)]\n",
+    "\n",
+    "response = requests.post(API_URL, headers=headers, data={\"inputs\": json.dumps(data)}, files=files, timeout=120)\n",
+    "\n",
+    "if response.status_code != 200:\n",
+    "    print(f\"❌ API 요청 실패 ({response.status_code})\")\n",
+    "    print(response.text)\n",
+    "else:\n",
+    "    try:\n",
+    "        print(json.dumps(response.json(), indent=2, ensure_ascii=False))\n",
+    "    except json.JSONDecodeError:\n",
+    "        print(\"⚠️ 응답이 JSON 형식이 아닙니다.\")\n",
+    "        print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d3827f76-44c4-4f15-8ef3-6ae678a2b8fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧾 결과:\n",
+      "\n",
+      "양쪽에서 남성이 서로 무언가에 항의하는 듯이 서로를 이리저리 패싸우고 있습니다. 두 남성은 각각 다른 방향으로 이동하며 서로를 향해 몸을 굴리고 있습니다. 배경에는 버스와 건물이 보이며, 이는 아마도 도시의 버스 정류장이나 같은 곳으로 보입니다. 이들의 행동은 경찰 조사의 대상이 될 만한 상황으로 보입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from openai import OpenAI\n",
+    "import base64\n",
+    "import mimetypes  # 파일 타입 추측용\n",
+    "\n",
+    "# --- 1. 로컬 이미지를 Base64로 인코딩하는 함수 ---\n",
+    "def encode_image_to_base64(image_path):\n",
+    "    \"\"\"로컬 이미지 파일을 읽어 Base64 데이터 URI로 인코딩합니다.\"\"\"\n",
+    "    mime_type, _ = mimetypes.guess_type(image_path)\n",
+    "    if not mime_type or not mime_type.startswith('image'):\n",
+    "        raise ValueError(\"알 수 없거나 유효하지 않은 이미지 파일입니다.\")\n",
+    "\n",
+    "    with open(image_path, \"rb\") as image_file:\n",
+    "        encoded_string = base64.b64encode(image_file.read()).decode('utf-8')\n",
+    "    \n",
+    "    return f\"data:{mime_type};base64,{encoded_string}\"\n",
+    "\n",
+    "# --- 2. OpenAI(Hugging Face Router) 클라이언트 설정 ---\n",
+    "client = OpenAI(\n",
+    "    base_url=\"https://router.huggingface.co/v1\",\n",
+    "    api_key=os.environ[\"HF_TOKEN\"],\n",
+    ")\n",
+    "\n",
+    "# --- 3. 이미지 경로 ---\n",
+    "local_image_path = \"/Users/jeongjihoon/Desktop/violence_captures/capture_1.jpg\"\n",
+    "\n",
+    "# --- 4. 프롬프트 ---\n",
+    "prompt = (\n",
+    "    \"다음 이미지는 CCTV에서 포착된 폭력 사건 장면입니다.\\n\"\n",
+    "    \"사진 속 상황을 관찰하여, 누가 어떤 행동을 하는지, 장소와 상황의 흐름을 자연스럽게 설명하세요.\\n\"\n",
+    "    \"마치 경찰 보고서 초안처럼, 사건의 개요를 객관적이고 간결한 한 문단으로 요약하세요.\\n\"\n",
+    "    \"직역형 표현 대신 자연스러운 서술문 형태로 써주세요.\"\n",
+    ")\n",
+    "\n",
+    "# --- 5. 모델 호출 ---\n",
+    "try:\n",
+    "    base64_image_url = encode_image_to_base64(local_image_path)\n",
+    "\n",
+    "    completion = client.chat.completions.create(\n",
+    "        model=\"Qwen/Qwen2.5-VL-7B-Instruct:hyperbolic\",\n",
+    "        messages=[\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": [\n",
+    "                    {\"type\": \"text\", \"text\": prompt},\n",
+    "                    {\"type\": \"image_url\", \"image_url\": {\"url\": base64_image_url}},\n",
+    "                ],\n",
+    "            }\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
+    "    print(\"🧾 결과:\\n\")\n",
+    "    # ✅ 핵심 수정: message 객체에서 content를 직접 출력\n",
+    "    print(completion.choices[0].message.content)\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"오류: '{local_image_path}' 파일을 찾을 수 없습니다.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"오류 발생: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "efd23a78-b2eb-476d-a9c9-a42117973f9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧩 1차 (1~4장) 요약 중...\n",
+      "🧩 2차 (5~8장) 요약 중...\n",
+      "\n",
+      "🧠 최종 사건 요약 생성 중...\n",
+      "\n",
+      "\n",
+      "✅ 최종 사건 요약:\n",
+      "\n",
+      "남성 A가 차량에 세우는 남성 B를 돕다가 차량 옆을 지나간 남성 C가 폭력 사건을 목격했다. 이 사건은 공공 차량이 주차된 곳에서 피의자와 피해자가 그란지로 달려들어 싸우는 것으로, 피해자는 공개적으로 눈을 맞추며 싸우고 있다. 주변에는 다른 인물들이 관찰하고 있다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from openai import OpenAI\n",
+    "import base64\n",
+    "import mimetypes\n",
+    "\n",
+    "# --- 1. Base64 인코딩 함수 ---\n",
+    "def encode_image_to_base64(image_path):\n",
+    "    mime_type, _ = mimetypes.guess_type(image_path)\n",
+    "    if not mime_type or not mime_type.startswith(\"image\"):\n",
+    "        raise ValueError(f\"유효하지 않은 이미지 파일: {image_path}\")\n",
+    "    with open(image_path, \"rb\") as f:\n",
+    "        encoded = base64.b64encode(f.read()).decode(\"utf-8\")\n",
+    "    return f\"data:{mime_type};base64,{encoded}\"\n",
+    "\n",
+    "# --- 2. 클라이언트 설정 ---\n",
+    "client = OpenAI(\n",
+    "    base_url=\"https://router.huggingface.co/v1\",\n",
+    "    api_key=os.environ[\"HF_TOKEN\"],\n",
+    ")\n",
+    "\n",
+    "# --- 3. 이미지 경로 리스트 (총 8장) ---\n",
+    "image_folder = \"/Users/jeongjihoon/Desktop/violence_captures\"\n",
+    "image_paths = [os.path.join(image_folder, f\"capture_{i}.jpg\") for i in range(1, 9)]\n",
+    "\n",
+    "# --- 4. 프롬프트 ---\n",
+    "prompt = (\n",
+    "    \"다음 8장의 이미지는 CCTV에서 연속적으로 포착된 폭력 사건입니다.\\n\"\n",
+    "    \"이미지 속 인물의 행동, 위치, 상황 변화를 관찰하여 사건 전체를 자연스럽게 요약하세요.\\n\"\n",
+    "    \"한 문단으로 간결하게 작성하고, 불필요한 설명은 제외하세요.\"\n",
+    ")\n",
+    "\n",
+    "# --- 5. 4장씩 나눠서 처리 ---\n",
+    "def summarize_images(image_subset):\n",
+    "    base64_images = [\n",
+    "        {\"type\": \"image_url\", \"image_url\": {\"url\": encode_image_to_base64(p)}}\n",
+    "        for p in image_subset\n",
+    "    ]\n",
+    "    messages = [\n",
+    "        {\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": prompt}] + base64_images}\n",
+    "    ]\n",
+    "    completion = client.chat.completions.create(\n",
+    "        model=\"Qwen/Qwen2.5-VL-7B-Instruct:hyperbolic\",\n",
+    "        messages=messages,\n",
+    "    )\n",
+    "    return completion.choices[0].message.content\n",
+    "\n",
+    "# --- 6. 두 구간으로 나눠 요청 ---\n",
+    "try:\n",
+    "    print(\"🧩 1차 (1~4장) 요약 중...\")\n",
+    "    summary1 = summarize_images(image_paths[:4])\n",
+    "\n",
+    "    print(\"🧩 2차 (5~8장) 요약 중...\")\n",
+    "    summary2 = summarize_images(image_paths[4:])\n",
+    "\n",
+    "    # --- 7. 최종 요약 ---\n",
+    "    print(\"\\n🧠 최종 사건 요약 생성 중...\\n\")\n",
+    "    combined_prompt = (\n",
+    "        \"다음은 CCTV 폭력 사건의 두 구간 요약입니다.\\n\"\n",
+    "        f\"1️⃣ {summary1}\\n\"\n",
+    "        f\"2️⃣ {summary2}\\n\\n\"\n",
+    "        \"이 두 내용을 바탕으로, 사건 전체를 한 문단으로 짧고 명확하게 요약하세요.\\n\"\n",
+    "        \"사건의 핵심 내용만 남기고 군더더기는 생략하세요.\"\n",
+    "    )\n",
+    "\n",
+    "    final_completion = client.chat.completions.create(\n",
+    "        model=\"Qwen/Qwen2.5-VL-7B-Instruct:hyperbolic\",\n",
+    "        messages=[{\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": combined_prompt}]}],\n",
+    "    )\n",
+    "\n",
+    "    print(\"\\n✅ 최종 사건 요약:\\n\")\n",
+    "    print(final_completion.choices[0].message.content)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"⚠️ 오류 발생: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "897e66cb-3212-4a26-9ba5-8a02a1ba662d",
+   "id": "26a204b3-333f-449a-8fc0-00b0a56ba31b",
    "metadata": {},
    "outputs": [],
    "source": []
